bindings/RosuFFI.h

typedef struct String String;
typedef struct ScoreState ScoreState;
typedef struct Difficulty Difficulty;
typedef struct Performance Performance;
typedef struct BeatmapAttributesBuilder BeatmapAttributesBuilder;
typedef struct Mods Mods;
typedef struct Wire_Vec_HitObject Wire_Vec_HitObject;
typedef struct Beatmap Beatmap;
typedef struct Option_u32 Option_u32;
struct String { uint8_t *ptr; uintptr_t len; uintptr_t capacity; };
struct Wire_Vec_HitObject { uint8_t *data; uint32_t len; uint32_t capacity; };
struct Option_u32 { uint32_t variant; uint32_t some; };
struct ScoreState {
    uint32_t max_combo;
    uint32_t osu_large_tick_hits;
    uint32_t osu_small_tick_hits;
    uint32_t slider_end_hits;
    uint32_t n_geki;
    uint32_t n_katu;
    uint32_t n300;
    uint32_t n100;
    uint32_t n50;
    uint32_t misses;
    Option_u32 legacy_total_score;
};
void performance_state(Performance * instance, ScoreState state);
void performance_hp(Performance * instance, float hp);
String debug_score_state(const ScoreState * res);
void difficulty_p_mods(Difficulty * instance, const Mods * mods);
int64_t interoptopus_string_create(const void * utf8, uint64_t len, String * rval);
void beatmap_attributes_builder_hp(BeatmapAttributesBuilder * instance, float hp);
Wire_Vec_HitObject beatmap_hit_objects(const Beatmap * instance);