JavaRosuPP/src/main/java/desu/life/raw/RosuNative.java


    /**
     * {@snippet lang=c :
     * void performance_state(Performance *instance, ScoreState state)
     * }
     */
    public static void performance_state(MemorySegment instance, MemorySegment state) {
        var mh$ = performance_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_state", instance, state);
            }
            mh$.invokeExact(instance, state);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class performance_hp {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("performance_hp").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void performance_hp(Performance *instance, float hp)
     * }
     */
    public static FunctionDescriptor performance_hp$descriptor() {
        return performance_hp.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void performance_hp(Performance *instance, float hp)
     * }
     */
    public static MethodHandle performance_hp$handle() {
        return performance_hp.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void performance_hp(Performance *instance, float hp)
     * }
     */
    public static MemorySegment performance_hp$address() {
        return performance_hp.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void performance_hp(Performance *instance, float hp)
     * }
     */
    public static void performance_hp(MemorySegment instance, float hp) {
        var mh$ = performance_hp.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("performance_hp", instance, hp);
            }
            mh$.invokeExact(instance, hp);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class debug_score_state {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            String_.layout(),
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("debug_score_state").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * String debug_score_state(const ScoreState *res)
     * }
     */
    public static FunctionDescriptor debug_score_state$descriptor() {
        return debug_score_state.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * String debug_score_state(const ScoreState *res)
     * }
     */
    public static MethodHandle debug_score_state$handle() {
        return debug_score_state.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * String debug_score_state(const ScoreState *res)
     * }
     */
    public static MemorySegment debug_score_state$address() {
        return debug_score_state.ADDR;
    }

    /**
     * {@snippet lang=c :
     * String debug_score_state(const ScoreState *res)
     * }
     */
    public static MemorySegment debug_score_state(SegmentAllocator allocator, MemorySegment res) {
        var mh$ = debug_score_state.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("debug_score_state", allocator, res);
            }
            return (MemorySegment)mh$.invokeExact(allocator, res);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class difficulty_p_mods {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("difficulty_p_mods").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void difficulty_p_mods(Difficulty *instance, const Mods *mods)
     * }
     */
    public static FunctionDescriptor difficulty_p_mods$descriptor() {
        return difficulty_p_mods.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void difficulty_p_mods(Difficulty *instance, const Mods *mods)
     * }
     */
    public static MethodHandle difficulty_p_mods$handle() {
        return difficulty_p_mods.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void difficulty_p_mods(Difficulty *instance, const Mods *mods)
     * }
     */
    public static MemorySegment difficulty_p_mods$address() {
        return difficulty_p_mods.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void difficulty_p_mods(Difficulty *instance, const Mods *mods)
     * }
     */
    public static void difficulty_p_mods(MemorySegment instance, MemorySegment mods) {
        var mh$ = difficulty_p_mods.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("difficulty_p_mods", instance, mods);
            }
            mh$.invokeExact(instance, mods);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class interoptopus_string_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            RosuNative.C_LONG,
            RosuNative.C_POINTER,
            RosuNative.C_LONG,
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("interoptopus_string_create").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int64_t interoptopus_string_create(const void *utf8, uint64_t len, String *rval)
     * }
     */
    public static FunctionDescriptor interoptopus_string_create$descriptor() {
        return interoptopus_string_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int64_t interoptopus_string_create(const void *utf8, uint64_t len, String *rval)
     * }
     */
    public static MethodHandle interoptopus_string_create$handle() {
        return interoptopus_string_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int64_t interoptopus_string_create(const void *utf8, uint64_t len, String *rval)
     * }
     */
    public static MemorySegment interoptopus_string_create$address() {
        return interoptopus_string_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int64_t interoptopus_string_create(const void *utf8, uint64_t len, String *rval)
     * }
     */
    public static long interoptopus_string_create(MemorySegment utf8, long len, MemorySegment rval) {
        var mh$ = interoptopus_string_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("interoptopus_string_create", utf8, len, rval);
            }
            return (long)mh$.invokeExact(utf8, len, rval);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_attributes_builder_hp {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            RosuNative.C_POINTER,
            RosuNative.C_FLOAT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_attributes_builder_hp").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_hp(BeatmapAttributesBuilder *instance, float hp)
     * }
     */
    public static FunctionDescriptor beatmap_attributes_builder_hp$descriptor() {
        return beatmap_attributes_builder_hp.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_hp(BeatmapAttributesBuilder *instance, float hp)
     * }
     */
    public static MethodHandle beatmap_attributes_builder_hp$handle() {
        return beatmap_attributes_builder_hp.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void beatmap_attributes_builder_hp(BeatmapAttributesBuilder *instance, float hp)
     * }
     */
    public static MemorySegment beatmap_attributes_builder_hp$address() {
        return beatmap_attributes_builder_hp.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void beatmap_attributes_builder_hp(BeatmapAttributesBuilder *instance, float hp)
     * }
     */
    public static void beatmap_attributes_builder_hp(MemorySegment instance, float hp) {
        var mh$ = beatmap_attributes_builder_hp.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_attributes_builder_hp", instance, hp);
            }
            mh$.invokeExact(instance, hp);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class beatmap_hit_objects {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            Wire_Vec_HitObject.layout(),
            RosuNative.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("beatmap_hit_objects").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * Wire_Vec_HitObject beatmap_hit_objects(const Beatmap *instance)
     * }
     */
    public static FunctionDescriptor beatmap_hit_objects$descriptor() {
        return beatmap_hit_objects.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * Wire_Vec_HitObject beatmap_hit_objects(const Beatmap *instance)
     * }
     */
    public static MethodHandle beatmap_hit_objects$handle() {
        return beatmap_hit_objects.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * Wire_Vec_HitObject beatmap_hit_objects(const Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_hit_objects$address() {
        return beatmap_hit_objects.ADDR;
    }

    /**
     * {@snippet lang=c :
     * Wire_Vec_HitObject beatmap_hit_objects(const Beatmap *instance)
     * }
     */
    public static MemorySegment beatmap_hit_objects(SegmentAllocator allocator, MemorySegment instance) {
        var mh$ = beatmap_hit_objects.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("beatmap_hit_objects", allocator, instance);
            }
            return (MemorySegment)mh$.invokeExact(allocator, instance);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
